[gd_scene load_steps=3 format=3 uid="uid://bypycqbhb0xxd"]

[ext_resource type="Theme" uid="uid://cmvj8p1hux406" path="res://assets/ui/theme.tres" id="1_clm1h"]
[ext_resource type="Script" path="res://ui/character-select/character_select.gd" id="2_6qqut"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_clm1h")
script = ExtResource("2_6qqut")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Center" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
offset_left = 105.0
offset_top = 76.0
offset_right = 214.0
offset_bottom = 103.0

[node name="Label" type="Label" parent="Center/VBox"]
offset_right = 109.0
offset_bottom = 13.0
text = "Select your character."

[node name="HBox" type="HBoxContainer" parent="Center/VBox"]
offset_top = 17.0
offset_right = 109.0
offset_bottom = 27.0
alignment = 1

[node name="SelectMoe" type="Button" parent="Center/VBox/HBox"]
unique_name_in_owner = true
offset_left = 30.0
offset_right = 50.0
offset_bottom = 10.0
focus_neighbor_right = NodePath("../SelectMeat")
text = "Moe"

[node name="SelectMeat" type="Button" parent="Center/VBox/HBox"]
unique_name_in_owner = true
offset_left = 54.0
offset_right = 78.0
offset_bottom = 10.0
focus_neighbor_left = NodePath("../SelectMoe")
text = "Meat"

[connection signal="pressed" from="Center/VBox/HBox/SelectMoe" to="." method="_on_moe_pressed"]
[connection signal="pressed" from="Center/VBox/HBox/SelectMeat" to="." method="_on_meat_pressed"]
